// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiListGroupItem is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props color ghost is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--ghost"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props color inherit is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props color primary is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--primary"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props color subdued is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--subdued"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props color text is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--text"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props extraAction can be disabled 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-hasExtraAction"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
  <button
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="empty"
    />
  </button>
</li>
`;

exports[`OuiListGroupItem props extraAction is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-hasExtraAction"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
  <button
    aria-label="label"
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiListGroupItem__extraAction-alwaysShow"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="empty"
    />
  </button>
</li>
`;

exports[`OuiListGroupItem props href and onClick is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable"
>
  <a
    class="ouiListGroupItem__button"
    href="#"
    rel="noreferrer"
  >
    <span
      class="ouiListGroupItem__label"
      title=""
    />
  </a>
</li>
`;

exports[`OuiListGroupItem props href is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable"
>
  <a
    class="ouiListGroupItem__button"
    href="#"
    rel="noreferrer"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </a>
</li>
`;

exports[`OuiListGroupItem props href is rendered with rel 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable"
>
  <a
    class="ouiListGroupItem__button"
    href="#"
    rel="noreferrer"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </a>
</li>
`;

exports[`OuiListGroupItem props icon is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__icon"
    />
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props iconType is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__icon"
      color="inherit"
      data-ouiicon-type="empty"
    />
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props isActive is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isActive"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props isDisabled is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isDisabled"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props onClick is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable"
>
  <button
    class="ouiListGroupItem__button"
    type="button"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </button>
</li>
`;

exports[`OuiListGroupItem props size l is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--large"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props size m is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props size s is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--small"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props size xs is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--xSmall"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem props wrapText is rendered 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--wrapText"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`OuiListGroupItem renders a disabled button even if provided an href 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isDisabled ouiListGroupItem-isClickable"
>
  <button
    class="ouiListGroupItem__button"
    disabled=""
    type="button"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </button>
</li>
`;

exports[`OuiListGroupItem renders a disabled button even if provided an href 2`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isDisabled ouiListGroupItem-isClickable"
>
  <button
    class="ouiListGroupItem__button"
    disabled=""
    type="button"
  >
    <span
      class="ouiListGroupItem__label"
      title="Label"
    >
      Label
    </span>
  </button>
</li>
`;

exports[`OuiListGroupItem throws a warning if both iconType and icon are provided but still renders 1`] = `
<li
  class="ouiListGroupItem ouiListGroupItem--medium"
>
  <span
    class="ouiListGroupItem__text"
  >
    <span
      class="ouiListGroupItem__icon"
      color="inherit"
      data-ouiicon-type="empty"
    />
    <span
      class="ouiListGroupItem__label"
      title=""
    />
  </span>
</li>
`;
